--- a/mif-qm-styles.css
+++ b/mif-qm-styles.css
@@ -1,3 +1,111 @@
+/* Главная страница */
+
+.catalog .card {
+    border: 0;
+    border-radius: 0;
+}
+
+.catalog .card-img-top {
+    border-top-left-radius: 0; 
+    border-top-right-radius: 0;
+}
+
+.catalog .card a p {
+    color: inherit;
+    text-decoration: none;
+}
+
+.catalog img {
+    border-bottom: 3px solid #F14F4E;
+}
+
+h2.underline,
+h3.underline  {
+    position: relative;
+}
+
+h2.underline:before {
+    content: "";
+    position: absolute;
+    height: 3px;
+    width: 24%;
+    background: #F14F4E;
+    top: 100%;
+    left: 38%;
+    margin-top: 12px;
+}
+
+h2.underline:after {
+    content: "";
+    position: absolute;
+    height: 3px;
+    width: 12%;
+    background: #F14F4E;
+    top: 100%;
+    left: 44%;
+    margin-top: 20px;
+}
+
+h3.underline:before {
+    content: "";
+    position: absolute;
+    height: 3px;
+    width: 6.5rem;
+    background: #F14F4E;
+    top: 100%;
+    left: 0;
+    margin-top: 20px;
+}
+
+
+
+/* style.css?ver=4.9.4:380
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
+h2.underline:before, h2.underline:after {
+    box-sizing: inherit;
+} */
+
+.site-description {
+    margin-top: -1rem!important;
+    margin-bottom: 1rem!important;
+    font-size: 18px;
+    font-weight: 400;    
+}
+
+.carousel .carousel-caption {
+    top: 3rem; 
+    bottom: 3rem; 
+    right: 3rem; 
+    left: auto;
+}
+
+.carousel .card {
+    background: rgba(0, 0, 0, .65);
+
+    /* background-color: #000; */
+    /* opacity: 0.65; */
+}
+
+.carousel .card-body h4,
+.carousel .card-body button {
+    opacity: 1;
+}
+
+/* .homepage-bar a.h4,
+.homepage-bar a.h3,
+.homepage-bar a.h2 {
+    color: inherit;
+}
+
+.homepage-bar a.h4:hover,
+.homepage-bar a.h3:hover,
+.homepage-bar a.h2:hover {
+    text-decoration: none;
+} */
+
 /* Панель настройки доступа */
 
 .access-mode span.loading {
@@ -64,7 +172,7 @@ a.cancel:hover {
 }
 
 .quiz-menu .current  {
-    background-color: #ff5a79!important;
+    background-color: #007bff!important;
 }
 
 
