--- a/mif-qm-styles.css
+++ b/mif-qm-styles.css
@@ -1,3 +1,13 @@
+/* Индикатор обмена данными */
+
+.loading {
+     display: none;
+}
+
+.absolute {
+     position: absolute;
+}
+
 /* Главная страница */
 
 .catalog .card {
